--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,17 @@
 {
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
     "pg": "^8.16.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.17",
     "@types/pg": "^8.15.1",
+    "drizzle-kit": "^0.31.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
@@ -17,7 +20,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev" : "npx nodemon"
+    "dev": "npx nodemon"
   },
   "author": "",
   "license": "ISC",
