--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -23,4 +23,10 @@ services:
       - POSTGRES_DB=mydb
     ports :
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+
+volumes:
+  postgres_data:
     
