--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^1.4.0
   flutter_bloc: ^9.1.1
   shared_preferences: ^2.5.3
+  sqflite: ^2.4.2
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
