--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
   path: ^1.9.1
+  intl: ^0.20.2
+  flex_color_picker: ^3.7.1
 
 dev_dependencies:
   flutter_test:
